Changes to Version 2.2-4

  o Corrected Slovenian translation (by Matjaz Jeran).
  
  o Small improvements and bug fixes.

Changes to Version 2.2-3

  o Updated Slovenian translation (thanks to Matjaz Jeran).
  
  o Fixes to French translation (by Milan Bouchet-Valat).


Changes to Version 2.2-2

  o Updated Galician translation (thanks to Rafael Rodriguez Gayoso).
  
  o Fixes to French translation (by Milan Bouchet-Valat) and Chinese translation (by Tsung-wu Ho).
  
  o Added keep argument to popOutput() (suggestion of Liviu Andronic); similar argument added to popCommand().
  
  o Use new-style R icon.
  
  o Binomial and quasibinomial GLMs with logit link now print exponentiated coefficients ("odds" ratios), as do poisson and quasipoisson GLMs with log link (generalizing a suggestion of Jose Ramon Rueda).
  
  o Names of R objects to be created are no longer translated (e.g., "Dataset", "NormalSamples") into other languages to avoid potential problems (issue reported by Tsung-wu Ho).
  
  o Recognize new location for LaTeX in Mac OS X El Capitan.

Changes to Version 2.2-1

  o New Greek translation (contributed by Vasileios Dimitropoulos, Anastasios Vikatos, and Andreas Vikatos, with help from Chel Hee Lee).

  o Updated translations (with thanks to): Basque (Jose Ramon Rueda), Brazilian Portuguese (Marilia Sa Carvalho, with assistance of Chel Hee Lee), Catalan (Manel Salamero), Chinese (Tsung-wu Ho), simplified Chinese (Shulin Yang), French (Philippe Grosjean), Galician (for Rcmdr 2.1-x, Rafael Rodriguez Gayoso), German (Fritz Leisch), Indonesian (I Made Tirta), Italian (Stefano Calza), Japanese (Takaharu Araki), Korean (Jong-Hwa Shin), Polish (Lukasz Daniel), Romanian (Adrian Dusa), Slovenian (Matjaz Jeran), Spanish (Manuel Munoz Marquez).
  
  o Modified modelFormula() utility to permit polynomial and splines in one-sided formulas. Used this in Breusch-Pagan test dialog.
  
  O Tweaks.

Changes to Version 2.2-0
